--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./assets/js/script.js"></script>
 </head>
 
 <body>
-  <header class="header layout-header">
+  <header class="header layout-header js-header">
     <div class="header__inner">
       <h1 class="header__logo">
         <a href="#">
@@ -45,49 +45,49 @@
       <nav class="header__nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#campaign">
               <span class="pc-nav__en">Campaign</span>
               <span class="pc-nav__ja">キャンペーン</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#about">
               <span class="pc-nav__en">About us</span>
               <span class="pc-nav__ja">私たちについて</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#information">
               <span class="pc-nav__en">Information</span>
               <span class="pc-nav__ja">ダイビング情報</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#blog">
               <span class="pc-nav__en">Blog</span>
               <span class="pc-nav__ja">ブログ</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#voice">
               <span class="pc-nav__en">Voice</span>
               <span class="pc-nav__ja">お客様の声</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#price">
               <span class="pc-nav__en">Price</span>
               <span class="pc-nav__ja">料金一覧</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#faq">
               <span class="pc-nav__en">FAQ</span>
               <span class="pc-nav__ja">よくある質問</span>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="">
+            <a href="#contact">
               <span class="pc-nav__en">Contact</span>
               <span class="pc-nav__ja">お問い合わせ</span>
             </a>
@@ -104,62 +104,62 @@
           <div class="sp-nav__wrap">
             <ul class="sp-nav__items">
               <li class="sp-nav__item">
-                <a href="#">キャンペーン</a>
+                <a href="#campaign">キャンペーン</a>
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="#">ライセンス取得</a>
+                    <a href="#campaign">ライセンス取得</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">貸切体験ダイビング</a>
+                    <a href="#campaign">貸切体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">ナイトダイビング</a>
+                    <a href="#campaign">ナイトダイビング</a>
                   </li>
                 </ul>
               </li>
               <li class="sp-nav__item">
-                <a href="#">私たちについて</a>
+                <a href="#about" about>私たちについて</a>
               </li>
               <li class="sp-nav__item">
-                <a href="#">ダイビング情報</a>
+                <a href="#information">ダイビング情報</a>
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="#information">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="#information">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="#information">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
               <li class="sp-nav__item">
-                <a href="#">ブログ</a>
+                <a href="#blog">ブログ</a>
               </li>
             </ul>
           </div>
           <div class="sp-nav__wrap">
             <ul class="sp-nav__items">
               <li class="sp-nav__item">
-                <a href="#">お客様の声</a>
+                <a href="#voice">お客様の声</a>
               </li>
               <li class="sp-nav__item">
-                <a href="#">料金一覧</a>
+                <a href="#price">料金一覧</a>
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="#price">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="#price">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="#price">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
               <li class="sp-nav__item">
-                <a href="#">よくある質問</a>
+                <a href="#faq">よくある質問</a>
               </li>
               <li class="sp-nav__item">
                 <a href="#">プライバシー<br>ポリシー</a>
@@ -168,7 +168,7 @@
                 <a href="#">利用規約</a>
               </li>
               <li class="sp-nav__item">
-                <a href="#">お問い合わせ</a>
+                <a href="#contact">お問い合わせ</a>
               </li>
             </ul>
           </div>
@@ -178,7 +178,6 @@
   </header>
 
   <main>
-
     <section class="mv">
       <div class="mv__inner">
         <div class="mv__title-wrap">
@@ -224,7 +223,7 @@
       </div>
     </section>
 
-    <section class="campaign layout-campaign">
+    <section class="campaign layout-campaign" id="campaign">
       <div class="campaign__inner inner">
         <hgroup class="campaign__title section-title">
           <h2 class="section-title__main"><span>C</span>ampaign</h2>
@@ -232,6 +231,78 @@
         </hgroup>
         <div class="swiper campaign__swiper js-campaign-swiper">
           <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="campaign__card campaign-card">
+                <a href="#">
+                  <figure class="campaign-card__img">
+                    <img src="./assets/images/top/img-campaign1.jpg" alt="">
+                  </figure>
+                  <div class="campaign-card__body">
+                    <span class="campaign-card__category">ライセンス講習</span>
+                    <h3 class="campaign-card__title">ライセンス取得</h3>
+                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <div class="campaign-card__price-wrap">
+                      <p class="campaign-card__price">¥56,000</p>
+                      <p class="campaign-card__special-price">¥46,000</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="campaign__card campaign-card">
+                <a href="#">
+                  <figure class="campaign-card__img">
+                    <img src="./assets/images/top/img-campaign2.jpg" alt="">
+                  </figure>
+                  <div class="campaign-card__body">
+                    <span class="campaign-card__category">体験ダイビング</span>
+                    <h3 class="campaign-card__title">貸切体験ダイビング</h3>
+                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <div class="campaign-card__price-wrap">
+                      <p class="campaign-card__price">¥24,000</p>
+                      <p class="campaign-card__special-price">¥18,000</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="campaign__card campaign-card">
+                <a href="#">
+                  <figure class="campaign-card__img">
+                    <img src="./assets/images/top/img-campaign3.jpg" alt="">
+                  </figure>
+                  <div class="campaign-card__body">
+                    <span class="campaign-card__category">体験ダイビング</span>
+                    <h3 class="campaign-card__title">ナイトダイビング</h3>
+                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <div class="campaign-card__price-wrap">
+                      <p class="campaign-card__price">¥10,000</p>
+                      <p class="campaign-card__special-price">¥8,000</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="campaign__card campaign-card">
+                <a href="#">
+                  <figure class="campaign-card__img">
+                    <img src="./assets/images/top/img-campaign4.jpg" alt="">
+                  </figure>
+                  <div class="campaign-card__body">
+                    <span class="campaign-card__category">ファンダイビング</span>
+                    <h3 class="campaign-card__title">貸切ファンダイビング</h3>
+                    <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                    <div class="campaign-card__price-wrap">
+                      <p class="campaign-card__price">¥20,000</p>
+                      <p class="campaign-card__special-price">¥16,000</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
             <div class="swiper-slide">
               <div class="campaign__card campaign-card">
                 <a href="#">
@@ -323,7 +394,7 @@
       </div>
     </section>
 
-    <section class="about layout-about">
+    <section class="about layout-about" id="about">
       <div class="about__inner inner">
         <hgroup class="about__title section-title">
           <h2 class="section-title__main"><span>A</span>bout us</h2>
@@ -364,14 +435,14 @@
       <div class="about__bg-deco u-desktop"></div>
     </section>
 
-    <section class="information layout-information">
+    <section class="information layout-information" id="information">
       <div class="information__inner inner">
         <hgroup class="information__title section-title">
           <h2 class="section-title__main"><span>I</span>nformation</h2>
           <p class="section-title__sub">ダイビング情報</p>
         </hgroup>
         <div class="information__container">
-          <figure class="information__img js-img">
+          <figure class="information__img js-image">
             <img src="./assets/images/top/img-information.jpg" alt="">
           </figure>
           <div class="information__body">
@@ -393,7 +464,7 @@
       </div>
     </section>
 
-    <section class="blog layout-blog">
+    <section class="blog layout-blog" id="blog">
       <div class="blog__inner inner">
         <hgroup class="blog__title section-title">
           <h2 class="section-title__main section-title__main--white"><span>B</span>log</h2>
@@ -453,7 +524,7 @@
       </div>
     </section>
 
-    <section class="voice layout-voice">
+    <section class="voice layout-voice" id="voice">
       <div class="voice__top-deco u-desktop"></div>
       <div class="voice__inner inner">
         <hgroup class="voice__title section-title">
@@ -471,7 +542,7 @@
                   </div>
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
-                <figure class="voice-card__img">
+                <figure class="voice-card__img js-image">
                   <img src="./assets/images/top/img-voice01.jpg" alt="">
                 </figure>
               </div>
@@ -492,7 +563,7 @@
                   </div>
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
-                <figure class="voice-card__img">
+                <figure class="voice-card__img js-image">
                   <img src="./assets/images/top/img-voice02.jpg" alt="">
                 </figure>
               </div>
@@ -518,14 +589,14 @@
       </div>
     </section>
 
-    <section class="price layout-price">
+    <section class="price layout-price" id="price">
       <div class="price__inner inner">
         <hgroup class="price__title section-title">
           <h2 class="section-title__main"><span>P</span>rice</h2>
           <p class="section-title__sub">料金一覧</p>
         </hgroup>
         <div class="price__container">
-          <figure class="price__img">
+          <figure class="price__img js-image">
             <picture>
               <source srcset="./assets/images/top/img-price-pc.jpg" media="(min-width: 768px)">
               <img src="./assets/images/top/img-price-sp.jpg" alt="">
@@ -620,7 +691,7 @@
       <div class="price__bg-deco u-desktop"></div>
     </section>
 
-    <section class="contact layout-contact">
+    <section class="contact layout-contact" id="contact">
       <div class="contact__bg-deco u-desktop"></div>
       <div class="contact__inner inner">
         <div class="contact__container">
@@ -661,7 +732,6 @@
         </div>
       </div>
     </section>
-
   </main>
 
   <footer class="footer layout-footer">
@@ -689,75 +759,75 @@
         <div class="footer__nav-wrap">
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
-              <a href="#">キャンペーン</a>
+              <a href="#campaign">キャンペーン</a>
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="#">ライセンス取得</a>
+                  <a href="#campaign">ライセンス取得</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">貸切体験ダイビング</a>
+                  <a href="#campaign">貸切体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">ナイトダイビング</a>
+                  <a href="#campaign">ナイトダイビング</a>
                 </li>
               </ul>
             </li>
             <li class="footer__nav-item">
-              <a href="#">私たちについて</a>
+              <a href="#about">私たちについて</a>
             </li>
           </ul>
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
-              <a href="#">ダイビング情報</a>
+              <a href="#information">ダイビング情報</a>
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="#">ライセンス講習</a>
+                  <a href="#information">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">体験ダイビング</a>
+                  <a href="#information">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">ファンダイビング</a>
+                  <a href="#information">ファンダイビング</a>
                 </li>
               </ul>
             </li>
             <li class="footer__nav-item">
-              <a href="#">ブログ</a>
+              <a href="#blog">ブログ</a>
             </li>
           </ul>
         </div>
         <div class="footer__nav-wrap">
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
-              <a href="#">お客様の声</a>
+              <a href="#voice">お客様の声</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#">料金一覧</a>
+              <a href="#price">料金一覧</a>
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="#">ライセンス講習</a>
+                  <a href="#price">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">体験ダイビング</a>
+                  <a href="#price">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="#">ファンダイビング</a>
+                  <a href="#price">ファンダイビング</a>
                 </li>
               </ul>
             </li>
           </ul>
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
-              <a href="#">よくある質問</a>
+              <a href="#faq">よくある質問</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+              <a href="#privacy">プライバシー<br class="u-mobile">ポリシー</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#">利用規約</a>
+              <a href="#terms">利用規約</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#">お問い合わせ</a>
+              <a href="#contact">お問い合わせ</a>
             </li>
           </ul>
         </div>
