--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
   </header>
 
   <main>
-    <section class="mv">
+    <section class="mv js-mv">
       <div class="mv__inner">
         <div class="mv__title-wrap">
           <h2 class="mv__main-title">DIVING</h2>
@@ -836,6 +836,7 @@
         <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
       </div>
     </div>
+    <div class="page-top js-page-top"></div>
   </footer>
 </body>
 
