--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,18 @@
     </div>
   </header>
 
+  <div class="loading js-loading">
+    <div class="loading__logo js-loading-logo">
+      <img src="./assets/images/common/img-loading-logo.svg" alt="diving">
+    </div>
+    <div class="loading__img-left loading__img">
+      <img src="./assets/images/common/img-loading-left.jpg" alt="">
+    </div>
+    <div class="loading__img-right  loading__img">
+      <img src="./assets/images/common/img-loading-right.jpg" alt="">
+    </div>
+  </div>
+
   <main>
     <section class="mv js-mv">
       <div class="mv__inner">
@@ -187,7 +199,7 @@
         <div class="swiper mv__swiper js-mv-swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="mv__img">
+              <div class="mv__img js-mv-img">
                 <picture>
                   <source srcset="./assets/images/top/img-mv00.jpg" media="(min-width: 768px)">
                   <img src="./assets/images/top/img-mv00-sp.jpg" alt="">
@@ -195,7 +207,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="mv__img">
+              <div class="mv__img js-mv-img">
                 <picture>
                   <source srcset="./assets/images/top/img-mv01.jpg" media="(min-width: 768px)">
                   <img src="./assets/images/top/img-mv01-sp.jpg" alt="">
@@ -203,7 +215,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="mv__img">
+              <div class="mv__img js-mv-img">
                 <picture>
                   <source srcset="./assets/images/top/img-mv02.jpg" media="(min-width: 768px)">
                   <img src="./assets/images/top/img-mv02-sp.jpg" alt="">
@@ -211,7 +223,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="mv__img">
+              <div class="mv__img js-mv-img">
                 <picture>
                   <source srcset="./assets/images/top/img-mv03.jpg" media="(min-width: 768px)">
                   <img src="./assets/images/top/img-mv03-sp.jpg" alt="">
@@ -707,8 +719,11 @@
                 <li class="contact__item">営業時間:8:30-19:00</li>
                 <li class="contact__item">定休日:毎週火曜日</li>
               </ul>
-              <figure class="contact__img">
-                <img src="./assets/images/top/img-contact.jpg" alt="">
+              <figure class="contact__map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28636.51051461177!2d127.66410248727117!3d26.210863832614724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1704689012340!5m2!1sja!2sjp"
+                  width="" height="" style="border:0;" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
               </figure>
             </div>
           </div>
