--- a/src/index.html
+++ b/src/index.html
@@ -710,7 +710,7 @@
     </section>
 
     <section class="contact layout-contact" id="contact">
-      <div class="contact__bg-deco u-desktop"></div>
+      <div class="contact__bg-deco"></div>
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__left">
