--- a/src/index.html
+++ b/src/index.html
@@ -257,7 +257,9 @@
                   </figure>
                   <div class="campaign-card__body">
                     <span class="campaign-card__category">ライセンス講習</span>
-                    <h3 class="campaign-card__title">ライセンス取得</h3>
+                    <h3 class="campaign-card__title">
+                      ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得
+                    </h3>
                     <p class="campaign-card__text">全部コミコミ(お一人様)</p>
                     <div class="campaign-card__price-wrap">
                       <p class="campaign-card__price">¥56,000</p>
@@ -483,6 +485,7 @@
     </section>
 
     <section class="blog layout-blog" id="blog">
+      <div class="blog__bg-deco u-desktop"></div>
       <div class="blog__inner inner">
         <hgroup class="blog__title section-title">
           <h2 class="section-title__main section-title__main--white"><span>B</span>log</h2>
