--- a/src/index.html
+++ b/src/index.html
@@ -257,9 +257,7 @@
                   </figure>
                   <div class="campaign-card__body">
                     <span class="campaign-card__category">ライセンス講習</span>
-                    <h3 class="campaign-card__title">
-                      ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得
-                    </h3>
+                    <h3 class="campaign-card__title">ライセンス取得</h3>
                     <p class="campaign-card__text">全部コミコミ(お一人様)</p>
                     <div class="campaign-card__price-wrap">
                       <p class="campaign-card__price">¥56,000</p>
