--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
     <section class="campaign layout-campaign" id="campaign">
       <div class="campaign__inner inner">
         <hgroup class="campaign__title section-title">
-          <h2 class="section-title__main"><span>C</span>ampaign</h2>
+          <h2 class="section-title__main">Campaign</h2>
           <p class="section-title__sub">キャンペーン</p>
         </hgroup>
         <div class="swiper campaign__swiper js-campaign-swiper">
@@ -415,7 +415,7 @@
     <section class="about layout-about" id="about">
       <div class="about__inner inner">
         <hgroup class="about__title section-title">
-          <h2 class="section-title__main"><span>A</span>bout us</h2>
+          <h2 class="section-title__main">About us</h2>
           <p class="section-title__sub">私たちについて</p>
         </hgroup>
         <div class="about__content-wrap">
@@ -450,13 +450,12 @@
           </div>
         </div>
       </div>
-      <div class="about__bg-deco u-desktop"></div>
     </section>
 
     <section class="information layout-information" id="information">
       <div class="information__inner inner">
         <hgroup class="information__title section-title">
-          <h2 class="section-title__main"><span>I</span>nformation</h2>
+          <h2 class="section-title__main">Information</h2>
           <p class="section-title__sub">ダイビング情報</p>
         </hgroup>
         <div class="information__container">
@@ -483,10 +482,9 @@
     </section>
 
     <section class="blog layout-blog" id="blog">
-      <div class="blog__bg-deco u-desktop"></div>
       <div class="blog__inner inner">
         <hgroup class="blog__title section-title">
-          <h2 class="section-title__main section-title__main--white"><span>B</span>log</h2>
+          <h2 class="section-title__main section-title__main--white">Blog</h2>
           <p class="section-title__sub section-title__sub--white">ブログ</p>
         </hgroup>
         <ul class="blog__items">
@@ -544,10 +542,9 @@
     </section>
 
     <section class="voice layout-voice" id="voice">
-      <div class="voice__top-deco u-desktop"></div>
       <div class="voice__inner inner">
         <hgroup class="voice__title section-title">
-          <h2 class="section-title__main"><span>V</span>oice</h2>
+          <h2 class="section-title__main">Voice</h2>
           <p class="section-title__sub">お客様の声</p>
         </hgroup>
         <ul class="voice__items">
@@ -604,14 +601,13 @@
             </div>
           </a>
         </div>
-        <div class="voice__bottom-deco u-desktop"></div>
       </div>
     </section>
 
     <section class="price layout-price" id="price">
       <div class="price__inner inner">
         <hgroup class="price__title section-title">
-          <h2 class="section-title__main"><span>P</span>rice</h2>
+          <h2 class="section-title__main">Price</h2>
           <p class="section-title__sub">料金一覧</p>
         </hgroup>
         <div class="price__container">
@@ -707,11 +703,9 @@
           </a>
         </div>
       </div>
-      <div class="price__bg-deco u-desktop"></div>
     </section>
 
     <section class="contact layout-contact" id="contact">
-      <div class="contact__bg-deco"></div>
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__left">
@@ -736,7 +730,7 @@
           </div>
           <div class="contact__right">
             <hgroup class="contact__title section-title">
-              <h2 class="section-title__main section-title__main--contact"><span>C</span>ontact</h2>
+              <h2 class="section-title__main section-title__main--contact">Contact</h2>
               <p class="section-title__sub section-title__sub--contact">お問い合わせ</p>
             </hgroup>
             <p class="contact__text">ご予約・お問い合わせはコチラ</p>
